# ari-engine

./: Cargo.toml
.cargo/: config.toml
crates/ari-cli/: Cargo.toml
crates/ari-cli/src/: main.rs  store_cli.rs
crates/ari-core/: Cargo.toml
crates/ari-core/src/: lib.rs
crates/ari-engine/: Cargo.toml
crates/ari-engine/src/: lib.rs  named_assistant.rs
crates/ari-engine/tests/: integration.rs
crates/ari-ffi/: Cargo.toml
crates/ari-ffi/src/: assistant_registry.rs  lib.rs  settings_store.rs  skill_registry.rs
crates/ari-llm/: Cargo.toml
crates/ari-llm/prompts/en/: system.md
crates/ari-llm/prompts/it/: system.md
crates/ari-llm/src/: lib.rs
crates/ari-sign-bundle/: Cargo.toml
crates/ari-sign-bundle/src/: main.rs
crates/ari-skill-loader/: Cargo.toml
crates/ari-skill-loader/src/: assistant.rs  bundle.rs  declarative.rs  formatters.rs  host_capabilities.rs  http_config.rs  lib.rs  loader.rs  localized_manifest.rs  localized_strings.rs  manifest.rs  platform_capabilities.rs  registry.rs  scoring.rs  signature.rs  storage_config.rs  store.rs  tls.rs  wasm.rs
crates/ari-skill-validate/: Cargo.toml
crates/ari-skill-validate/src/: main.rs
crates/ari-skills/: Cargo.toml
crates/ari-skills/src/: calculator.rs  current_time.rs  date.rs  greeting.rs  lib.rs  open.rs  search.rs
docs/: architecture.md  assistant-skills.md
