[workspace]
resolver = "2"
members = [
    "crates/ari-core",
    "crates/ari-engine",
    "crates/ari-skills",
    "crates/ari-cli",
    "crates/ari-ffi",
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
fasteval = "0.2.4"
uniffi = "0.31.0"
