[package]
name = "ari-cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["llm"]
llm = ["ari-engine/llm", "dep:ari-llm"]

[dependencies]
ari-core = { path = "../ari-core" }
ari-engine = { path = "../ari-engine" }
ari-llm = { path = "../ari-llm", optional = true }
ari-skills = { path = "../ari-skills" }
ari-skill-loader = { path = "../ari-skill-loader" }
serde_json = { workspace = true }
sha2 = "0.11.0"

[dev-dependencies]
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["std"] }
flate2 = "1.1.9"
tar = "0.4.45"
