[package]
name = "ari-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "ari_ffi"

[dependencies]
ari-core = { path = "../ari-core" }
ari-engine = { path = "../ari-engine" }
ari-skills = { path = "../ari-skills" }
ari-skill-loader = { path = "../ari-skill-loader" }
serde_json = { workspace = true }
thiserror = "2.0.18"
uniffi = { workspace = true, features = ["cli"] }
