[package]
name = "ari-llm"
version = "0.1.0"
edition = "2021"
description = "On-device LLM fallback for Ari — skill rerouting and general QA when no skill matches"
license = "MIT"

[dependencies]
ari-core = { path = "../ari-core" }
llama-cpp-2 = "0.1.143"
regex = "1"
serde_json = { workspace = true }
